# coreUI

./: .gitignore  pyproject.toml
examples/: modern_example1.py  test_lib.py
src/coreDesign/: default_menu.py  default_window.py
