[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coreDesign"  
version = "1.0.0"
authors = [
  { name="Ernesto Alves", email="ernesto487dev@gmail.com" },
]
description = "Uma pequena biblioteca de componentes UI para desktop com PySide."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "PySide6>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/seu_usuario/seu_repositorio"
Issues = "https://github.com/seu_usuario/seu_repositorio/issues"

[tool.setuptools.packages.find]
where = ["src"] 